Mon Jan 31 07:16:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ace_wchar.h:
          Added ACE_TEXT_OutputDebugString

        * examples/Log_Msg/Log_Msg_MFC/MFC_Log.cpp:
          Use ACE_TEXT_OutputDebugString instead of ::OutputDebugString
          to fix compile errors in wchar builds

Sun Jan 30 08:46:56 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/Filecache.cpp:

	  Added missing "template<>" to explicit class member
	  specializations, as required by the C++ standard.

Sun Jan 30 13:45:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/IOStream/client/iostream_client.cpp:
          Fixed unicode compile warning

Sun Jan 30 13:37:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/C++NPv1/Process_Per_Connection_Logging_Server.cpp:
          Use ACE_OS::strncpy instead of strncpy directly to fix compile
          error in Cygwin build

Sun Jan 30 13:33:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/ASX/CCM_App/CCM_App.cpp:
          Fixed warning in unicode build

        * ace/Service_Object.h:
          Doxygen fixes

Sun Jan 30 13:28:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/APG/Logging/Wrap_Macros.cpp:
          Fixed compile problem in unicode build

Sun Jan 30 13:25:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/APG/Reactor/Timers.cpp:
          Fixed compile problem in unicode build

Sun Jan 30 13:22:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/TMCast/Member/member.cpp:
          Fixed compile problem in unicode build

Sun Jan 30 13:04:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
        * include/makeinclude/*.bor:
        * bin/MakeProjectCreator/templates/bor.mpd:
          Removed support for PASCAL, this was used for BCB4 which is already
          not supported already for a long time
