@@ -4,6 +4,7 @@ project (asnmp_example_get) : aceexe {
   exename = get
   after += asnmp_lib
   libs  += asnmp
+  avoids += uses_wchar
   includes += $(ACE_ROOT)/ASNMP
   source_files {
     get.cpp
@@ -14,6 +15,7 @@ project (asnmp_example_get_async) : aceexe {
   exename = get_async
   after += asnmp_lib
   libs  += asnmp
+  avoids += uses_wchar
   includes += $(ACE_ROOT)/ASNMP
   source_files {
     get_async.cpp
