@@ -4,6 +4,7 @@ project (asnmp_example_next) : aceexe {
   exename = next
   after += asnmp_lib
   libs  += asnmp
+  avoids += uses_wchar
   includes += $(ACE_ROOT)/ASNMP
   source_files {
     next.cpp
