@@ -4,6 +4,7 @@ project (asnmp_example_set) : aceexe {
   exename = set
   after += asnmp_lib
   libs  += asnmp
+  avoids += uses_wchar
   includes += $(ACE_ROOT)/ASNMP
   source_files {
     set.cpp
